# parcnet

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
apps/: Cargo.toml  apps.md
apps/src/: e.rs  is_old_enough.rs  locked_message.rs  main.rs  private_stats.rs  unlock_message.rs
assets/: Cargo.toml
assets/src/: assets.rs
chat/: .gitignore  Cargo.toml  README.md
chat/.cargo/: config.toml
chat/src/: chat.rs  chat_old.rs  logic.rs  main.rs
chat/src/chat/: assets.rs  input.rs  loader.rs  name.rs  podcount.rs
chat/src/logic/: auto_update.rs  gossip.rs  identity.rs  key.rs  message.rs  name.rs  persistence.rs  pods.rs
constants/: Cargo.toml
constants/src/: constants.rs
executor/: Cargo.toml
executor/src/: lib.rs  main.rs
go/: LICENSE  go.mod  go.sum  main.go  pod_cli  pod_creator
go/cmd/example/: main.go
go/cmd/server/: .env.example  main.go  zupass.go
go/pkg/pod/: create.go  pod.go  pod_cli  pod_test.go  sign.go  verify.go
go/pod/: README.md  create.go  crypto.go  entries.go  entries_test.go  init.go  pod.go  pod_cli  pod_test.go  pod_worker  util.go  utils.go  value.go  value_test.go  verify.go
parcnet/: Cargo.toml
parcnet-pod/: Cargo.toml  Changes.md
parcnet-pod-wasm/: Cargo.toml  index.html
parcnet-pod-wasm/src/: lib.rs
parcnet-pod/benches/: pod_benchmarks.rs
parcnet-pod/src/: lib.rs
parcnet-pod/src/crypto/: eddsa.rs  lean_imt.rs  mod.rs  poseidon_hash.rs
parcnet-pod/src/crypto/blake512/: blake512.rs  block.rs  mod.rs
parcnet-pod/src/pod/: macros.rs  mod.rs  pod_impl.rs  serialisation.rs  value.rs  zupass.rs
pex/: Cargo.toml  todo.txt
pex/example-scripts/: create-pod.scm  reworked.scm  some-pods.scm
pex/src/: lib.rs  macros.rs  main.rs  pex_constants.rs  repl.rs  store.rs
pex/src/repl/: display.rs  reedline.rs
pex/src/store/: iroh.rs
pod2/: Cargo.toml  README.md
pod2/src/: _debug  _debugnotes  _todo  biguint.rs  eddsa.rs  jubjubcurve.rs  jubjubfield.rs  lib.rs  mod65537.rs  pod.rs  schnorr.rs  schnorr_prover.rs  serialization.rs
pod2/src/plonky2_u32/: mod.rs  serialization.rs  util.rs  witness.rs
pod2/src/plonky2_u32/gadgets/: arithmetic_u32.rs  multiple_comparison.rs  range_check.rs
pod2/src/plonky2_u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  range_check_u32.rs  subtraction_u32.rs
pod2/src/pod/: circuit.rs  entry.rs  gadget.rs  mod.rs  operation.rs  origin.rs  payload.rs  statement.rs  util.rs  value.rs
pod2/src/pod/circuit/: entry.rs  gpg.rs  mod.rs  operation.rs  origin.rs  pod.rs  statement.rs  util.rs
pod2/src/pod/gadget/: introducer.rs  mod.rs  opexecutor.rs  plonky_pod.rs  schnorr_pod.rs
pod2/src/recursion/: example_innercircuit.rs  innercircuit.rs  mod.rs  recursion_framework.rs  recursion_tree.rs  traits.rs  traits_examples.rs  utils.rs
pod2/src/signature/: _old_jubjubfield.rs  biguint.rs  eddsa.rs  jubjubcurve.rs  jubjubfield.rs  mod.rs  mod65537.rs  schnorr.rs  schnorr_prover.rs  serialization.rs
src/: crypto.rs  lib.rs  main.rs
src/crypto/: eddsa.rs  lean_imt.rs  poseidon_hash.rs
src/crypto/blake512/: mod.rs
src/pod/: zupass.rs
wordcloud/: Cargo.toml
wordcloud/src/: chat.rs  main.rs
