[workspace]
resolver = "2"
members = ["parcnet-pod", "parcnet", "pex", "pod2", "constants"]

[workspace.dependencies]
parcnet-pod = { path = "parcnet-pod" }
pod2 = { path = "pod2" }
constants = { path = "constants" }
anyhow = "1.0.86"
iroh = "0.26.0"
plonky2 = { git = "https://github.com/mir-protocol/plonky2" }
chrono = "0.4"
