[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
chrono = "0.4.38"
futures = "0.3.30"
gpui = { git = "https://github.com/zed-industries/zed" }
iroh-base = "0.26.0"
iroh-gossip = "0.26.0"
iroh-net = "0.26.0"
pkarr = "2.2.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.12.0"
