[package]
name = "chat"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
chrono = "0.4.38"
eyre = "0.6.12"
futures = "0.3.30"
gpui = { git = "https://github.com/zed-industries/zed" }
iroh = "0.26.0"
pkarr = "2.2.0"
reqwest = "0.12.8"
serde_json = "1.0.128"
tempfile = "3.13.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.12.0"

[package.metadata.bundle]
name = "chat"
identifier = "com.0xparc.chat"
icon = [
    "chat/assets/icon/32x32.png",
    "chat/assets/icon/128x128.png",
    "chat/assets/icon/128x128@2x.png",
]
resources = ["chat/assets"]
copyright = ""
category = "Public.App-Category.Productivity"
short_description = "chat"
long_description = "chat"

[package.metadata.bundle.macos]
minimum_system_version = "10.13"

[features]
dev-mode = []
