[package]
name = "chat"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow.workspace = true
assets.workspace = true
pod2.workspace = true
bytes = "1.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
ed25519-dalek = "2.1.1"
eyre = "0.6.12"
futures = "0.3.30"
gpui.workspace = true
iroh = "0.26.0"
pkarr = "2.2.0"
postcard = "1.0.10"
reqwest = "0.12.8"
rust-embed.workspace = true
serde = "1.0.210"
serde_json = "1.0.128"
tempfile = "3.13.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
blake3 = "1.5.4"
plonky2.workspace = true

[package.metadata.bundle]
name = "chat"
identifier = "com.0xparc.chat"
icon = [
    "chat/assets/icon/32x32.png",
    "chat/assets/icon/128x128.png",
    "chat/assets/icon/128x128@2x.png",
]
resources = ["chat/assets"]
copyright = ""
category = "Public.App-Category.Productivity"
short_description = "chat"
long_description = "chat"

[package.metadata.bundle.macos]
minimum_system_version = "10.13"

[features]
dev-mode = []
