[package]
name = "parcnet-pod-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
babyjubjub-ark = { git = "https://github.com/robknight/babyjubjub-ark", features = ["wasm"] }
getrandom = { version = "0.2.15", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3.1", features = ["wasm_js"] }
parcnet-pod = { path = "../parcnet-pod", default-features = false, features = ["wasm"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "z"
codegen-units = 1
