[package]
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "0xPARC", "ZK", "PARCNET"]
categories = ["cryptography", "network-programming", "development-tools"]
description = "Portable Object Datatype"
homepage = "https://pod.org"
repository = "https://github.com/0xparc/parcnet"
name = "parcnet-pod"
version = "0.1.0"
edition = "2021"

[lib]
name = "parcnet_pod"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
hex = "0.4.3"
indexmap = { version = "2.5.0", features = ["serde"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
poseidon-rs = "0.0.10"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
sha2 = "0.10.8"
thiserror = "1.0.64"
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
