[package]
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "0xPARC", "ZK", "PARCNET"]
categories = ["cryptography", "network-programming", "development-tools"]
description = "Portable Object Datatype"
homepage = "https://pod.org"
repository = "https://github.com/0xparc/parcnet"
name = "parcnet-pod"
version = "0.1.0"
edition = "2021"

[lib]
name = "parcnet_pod"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "pod_cli"
path = "src/bin/pod_cli.rs"


[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-std = "0.4.0"
babyjubjub-ark = { git = "https://github.com/ax0/babyjubjub-ark", features = ["aarch64"] }
base64 = "0.22.1"
hex = "0.4.3"
indexmap = { version = "2.5.0", features = ["rayon", "serde"] }
lazy_static = "1.5.0"
libc = "0.2.169"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark", version = "0.0.1" }
poseidon-rs = "0.0.10"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde_with = { version = "3.11.0", features = ["hex"] }
sha2 = "0.10.8"
thiserror = "1.0.64"
time = {version = "0.3.36", features = ["macros", "serde"]}
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "pod_benchmarks"
harness = false
