[package]
name = "pex"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2.workspace = true
constants.workspace = true
pod2.workspace = true
anyhow.workspace = true
async-recursion = "1.1.1"
eyre = "0.6.12"
tokio = { version = "1", features = [
    "macros",
    "time",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tracing = "0.1.40"
colored = "2.1.0"
reedline = "0.36.0"
nu-ansi-term = "0.50.1"
