[package]
name = "pod2"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2"
path = "src/lib.rs"

[dependencies]
plonky2.workspace = true
anyhow = "1.0.56"
rand = "0.8.5"
log = "0.4.22"
serde = "1.0.210"
env_logger = "0.10.0"
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] }
