[package]
name = "pod2"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2"
path = "src/lib.rs"

[dependencies]
plonky2.workspace = true
parcnet-pod.workspace = true
anyhow = "1.0.56"
itertools = "0.13"
num = { version = "0.4.0", default-features = false }
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.10.0"
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] }
serde = "1.0.210"
